Fix hover jumping for fb link

--- a/frontend/assets/scss/components/footer.component.scss
+++ b/frontend/assets/scss/components/footer.component.scss
@@ -36,9 +36,14 @@
         &.social-media {
           display: inline-flex;
           align-items: center;
+          .social-media__text {
+            margin-bottom: 1px;
+          }
           &:hover {
             border-bottom: 0px;
+
             .social-media__text {
+              margin-bottom: 0px;
               border-bottom: 1px solid $orange;
             }
           }
